[tool.poetry]
name = "water-sort"
version = "0.1.0"
description = ""
authors = ["Ethan Lew <15167713+ethanl21@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
